# deprecated-mentor-classifier

./: .dockerignore  .flake8  .gitattributes  .gitignore  LICENSE_HEADER  Makefile  README.md  mypy.ini  package-lock.json  pyproject.toml
.github/workflows/: test-and-publish.yml
mentor_classifier/: .gitattributes  Dockerfile  Makefile  README.md  dataset-1.py  jobs_train.py  pyproject.toml  requirements.test.txt  requirements.txt  setup.py
mentor_classifier/mentor_classifier/: __init__.py  api.py  constants.py  dao.py  dataset-1.py  log.py  mentor.py  metrics.py  ner.py  ner_coverage.py  ner_templates.py  sentence_transformer.py  spacy_model.py  spacy_preprocessor.py  speechact.py  stopwords.py  types.py  utils.py
mentor_classifier/mentor_classifier/Users/erice/Downloads/output/model-best/: config.cfg
mentor_classifier/mentor_classifier/Users/erice/Downloads/output/model-best/ner/: model
mentor_classifier/mentor_classifier/Users/erice/Downloads/output/model-last/: meta.json
mentor_classifier/mentor_classifier/Users/erice/Downloads/output/model-last/ner/: moves
mentor_classifier/mentor_classifier/Users/erice/Downloads/output/model-last/vocab/: strings.json
mentor_classifier/mentor_classifier/arch/lr/: __init__.py  predict.py  train.py
mentor_classifier/mentor_classifier/arch/lr-transformer/: __init__.py  predict.py  train.py
mentor_classifier/mentor_classifier/arch/lr_transformer/: __init__.py  embeddings.py  predict.py  sentence_transformer.py  train.py
mentor_classifier/mentor_classifier/arch/transformers/: __init__.py  embeddings.py  predict.py  train.py
mentor_classifier/mentor_classifier/classifier/: __init__.py  dao.py  nltk_preprocessor.py  predict.py  train.py  word2vec.py
mentor_classifier/mentor_classifier/lr/: __init__.py  dao.py  predict.py  train.py
mentor_classifier/mentor_classifier_tasks/: tasks.py
mentor_classifier/tests/: __init__.py  conftest.py  helpers.py  test_dao.py  test_followup_generation.py  test_generates_followups.py  test_mentor.py  test_ner.py  test_predict.py  test_train.py  test_train_and_predict.py  types.py
mentor_classifier/tests/fixtures/csv/: clint.csv
mentor_classifier/tests/fixtures/data/: pop_culture.csv
mentor_classifier/tests/fixtures/data/clint/: data.csv  fused_model.pkl  lstm_topic_model.h5  model.pkl  test.csv  unfused_model.pkl  w2v.txt
mentor_classifier/tests/fixtures/data/clint_long/: all_pop.csv  average_blob.csv  background.csv  background_followups.csv  background_random.csv  background_scored.csv  data.csv  family.csv  job.csv  job_followups.csv  motivation.csv  motivation_scored.csv  noo_z.csv  relevance.csv  sorted_background.csv  verbs.csv  verbs_family.csv  verbs_work.csv
mentor_classifier/tests/fixtures/data/clint_long/background/: README  background_e.csv  background_f.csv  background_f_i.csv  background_f_i_e.csv  background_f_i_p.csv  background_i.csv  background_i_e.csv  background_just_ent.csv  background_scored.csv  pop_threshold.csv
mentor_classifier/tests/fixtures/data/covid/: data.csv  synonym_test.csv  test.csv  verbs.csv
mentor_classifier/tests/fixtures/data/covid_synonyms/: data.csv  test.csv
mentor_classifier/tests/fixtures/data/jobs/: data.csv
mentor_classifier/tests/fixtures/data/mentor_has_no_offtopic/mentor_classifier.arch.lr/: model.pkl  w2v.txt
mentor_classifier/tests/fixtures/data/ner/: test.csv
mentor_classifier/tests/fixtures/data_out/clint/: fused_model.pkl  lstm_topic_model.h5
mentor_classifier/tests/fixtures/graphql/: clint.json  clint_chat.json  mentor_has_no_offtopic.json
mentor_classifier/tests/fixtures/mentors/: clint.json
mentor_classifier_api/: .coveragerc  Dockerfile  Makefile  README.md  mypy.ini  pyproject.toml  requirements.test.txt  requirements.txt
mentor_classifier_api/src/: entrypoint.sh  manage.py
mentor_classifier_api/src/mentor_classifier_api/: __init__.py  helpers.py
mentor_classifier_api/src/mentor_classifier_api/blueprints/: evaluate.py  fetch.py  followups.py  healthcheck.py  mentors.py  questions.py  train.py  trainingdata.py
mentor_classifier_api/src/mentor_classifier_tasks/: __init__.py  tasks.py
mentor_classifier_api/src/mentor_pipeline_api/: __init__.py  config_default.py
mentor_classifier_api/src/mentor_pipeline_api/blueprints/: evaluate.py  train.py
mentor_classifier_api/src/mentor_pipeline_tasks/: tasks.py
mentor_classifier_api/tests/: conftest.py  test_cors.py  test_evaluate.py  test_fetch.py  test_fetch_training_data.py  test_followups.py  test_healthcheck.py  test_mentors.py  test_ping.py  test_questions.py  test_train.py
mentor_classifier_api/tests/fixtures/fetched_training_data/: clint.csv
mentor_classifier_api/tests/fixtures/graphql/: category_answers.json  clint.json  feedback.json  mentor_answers.json
mentor_classifier_api/tests/fixtures/models/clint/: fused_model.pkl  lstm_topic_model.h5  model.pkl
mentor_classifier_api/tests/fixtures/models/clint/clint/: unfused_model.pkl  w2v.txt
mentor_classifier_api/tests/fixtures/models/clint/mentorpal_classifier.lr/: w2v.txt
mentor_classifier_api/tests/fixtures/models/default/: build_version.json
mentor_classifier_api/tests/fixtures/models/q1/: build_version.json
mentor_pipeline/: Dockerfile  Makefile  requirements.txt  setup.py
mentor_pipeline/mentor_pipeline/: log.py  mentor.py  metrics.py
mentor_pipeline/mentor_pipeline_tasks/: tasks.py
mentor_pipeline/tests/: test_mentor.py  test_train.py
mentor_pipeline_api/: Dockerfile  Makefile  mypy.ini
mentor_pipeline_api/src/: entrypoint.sh  manage.py
mentor_pipeline_api/tests/: conftest.py  test_cors.py  test_evaluate.py  test_ping.py  test_train.py
sentence-transformer/: Makefile
shared/: Makefile  generate_pop.py  generate_transformer_pkl.py  pyproject.toml  sentence_transformer_download.py  spacy_download.py  utils.py  word2vec_download.py
tools/: classifier-k6.js  poetry_ensure_installed.sh  questions.json  virtualenv_ensure_installed.sh
word2vec/: Makefile
(+13 files in other folders)
