[tool.poetry]
name = "mentor-classifier"
version = "1.0.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "~3.8.4"
black = "^20.8b1"
flake8 = "^3.8.4"
mypy = "^v0.782"
pep8-naming = "^0.11.1"
pip-upgrader = "*"
licenseheaders = {git = "http://github.com/kycarr/licenseheaders.git"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
