[tool.poetry]
name = "mentor_classifier_api"
version = "1.0.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "~3.8.4"
celery = "^5.1.0"
Cerberus = "^1.3.4"
Flask = "^2.0.1"
Flask-Cors = "^3.0.10"
gunicorn = "^20.1.0"
redis = "^3.5.3"
Werkzeug = "^2.0.1"
responses = "^0.13.3"
pandas = "^1.2.4"
mentor-classifier = {path = "../mentor_classifier/dist/mentor_classifier-1.0.0.tar.gz"}
poethepoet = "^0.10.0"

[tool.poetry.dev-dependencies]
coverage = "^5.5"
pip-upgrader = "*"
poethepoet = "^0.10.0"
pytest = "^6.2.4"
pytest-env = "^0.6.2"
pytest-mock = "^3.6.1"
pytest-only = "^1.2.2"
pytest-flask = "^1.2.0"
requests = "^2.25.1"

[tool.poe.tasks]
# The problem stems from that fb doesn't publish 
# the cpu versions to pypi and then versions of pip
# after 19.0 don't respect "dependency_links"
# (e.g. for https://download.pytorch.org/whl/torch_stable.html)
force-cpu-only = "python -m pip install torch==1.9.0+cpu torchvision==0.10.0+cpu -f https://download.pytorch.org/whl/torch_stable.html"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
